# AdventOfCode-2024

./: .gitignore  CMakeLists.txt  main.cpp
src/: InputReader.cpp  InputReader.h
src/day01/: PartOne.cpp  PartOne.h  PartTwo.cpp  PartTwo.h
test/: InputReaderTest.cpp  InputReaderTest.h
test/day01/: PartOneTest.cpp  PartOneTest.h  PartTwoTest.cpp  PartTwoTest.h
